<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:enabled="true"
        android:icon="@drawable/outline_home_24"
        android:iconTint="@drawable/icon_hover"
        android:title="Dashboard"/>
    <item
        android:id="@+id/mapFragment"
...
